<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_events_list"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_all_events_list"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/all_events" />
    </group>
</menu>