<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gtamapirl.ui.map.MapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_setMarker"
            app:destination="@id/fragment_add_event" />

        <action
            android:id="@+id/action_goToEvent"
            app:destination="@id/fragment_event" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_event"
        android:name="com.example.gtamapirl.ui.add_event.AddEventFragment"
        android:label="@string/menu_addEvent"
        tools:layout="@layout/fragment_add_event">

        <argument
            android:name="latitude"
            app:argType="float"
            android:defaultValue="0" />
        <argument
            android:name="longitude"
            app:argType="float"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_goToEvent"
            app:destination="@id/fragment_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.gtamapirl.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_toHome"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_goToPicker"
            app:destination="@id/fragment_icon_picker" />
    </fragment>

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.gtamapirl.ui.chats.chats_list.ChatsListFragment"
        android:label="Chats list"
        tools:layout="@layout/fragment_chats_list">
        <action
            android:id="@+id/action_nav_chats_to_fragment_chat"
            app:destination="@id/fragment_chat" />
    </fragment>

    <fragment
        android:id="@+id/nav_events_list"
        android:name="com.example.gtamapirl.ui.my_events.EventsListFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events_list">
        <action
            android:id="@+id/action_goToEvent"
            app:destination="@id/fragment_event" />
    </fragment>

    <fragment
        android:id="@+id/nav_all_events_list"
        android:name="com.example.gtamapirl.ui.all_events.AllEventsListFragment"
        android:label="@string/all_events"
        tools:layout="@layout/fragment_all_events_list">
        <action
            android:id="@+id/action_goToEvent"
            app:destination="@id/fragment_event" />
    </fragment>

    <fragment
        android:id="@+id/fragment_event"
        android:name="com.example.gtamapirl.ui.event.EventFragment"
        android:label="Event..."
        tools:layout="@layout/fragment_event">
        <argument
            android:name="idEvent"
            app:argType="string"
            android:defaultValue="empty" />
        <action
            android:id="@+id/goToChat"
            app:destination="@id/fragment_chat" />
    </fragment>

    <fragment
        android:id="@+id/fragment_chat"
        android:name="com.example.gtamapirl.ui.chats.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="idChat"
            app:argType="string"
            android:defaultValue="empty" />
    </fragment>

    <fragment
        android:id="@+id/fragment_icon_picker"
        android:name="com.example.gtamapirl.ui.account.IconPickerFragment"
        android:label="Icon Picker"
        tools:layout="@layout/fragment_icon_picker">
        <action
            android:id="@+id/action_returnToAccount"
            app:destination="@id/nav_account" />
    </fragment>

</navigation>